# Bachelor-Praktikum

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: github-actions.yml
MolSim/: .gitignore  CMakeLists.txt  Doxyfile  README.md
MolSim/cmake/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.in  MD_vtk_12450.vtu  Makefile  MolSim  cmake_install.cmake
MolSim/cmake/tests/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  tests
MolSim/doxys_documentation/html/: ArrayUtils_8h.html  FileReader_8h.html  FileReader_8h_source.html  MaxwellBoltzmannDistribution_8h.html  MaxwellBoltzmannDistribution_8h_source.html  MolSim_8cpp.html  ParticleContainer_8cpp.html  ParticleContainer_8h.html  ParticleContainer_8h_source.html  XYZWriter_8cpp.html  XYZWriter_8h_source.html  annotated.html  classCellData-members.html  classCellData.html  classCells.html  classDataArrayList__t-members.html  classDataArrayList__t.html  classFileReader-members.html  classFileReader.html  classParticle-members.html  classParticleContainer-members.html  classPieceUnstructuredGrid__t-members.html  classPolyData__t-members.html  classPolyData__t.html  classUnstructuredGrid__t.html  classoutputWriter_1_1VTKWriter-members.html  classoutputWriter_1_1VTKWriter.html  classoutputWriter_1_1XYZWriter-members.html  classtype.html  dir_313caf1132e152dd9b58bea13a4052ca.html  files.html  functions_a.html  functions_c.html  functions_d.html  functions_enum.html  functions_f.html  functions_func.html  functions_i.html  functions_m.html  functions_n.html  (+27 more)
MolSim/doxys_documentation/html/search/: all_1.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  files_3.js  functions_1.js  functions_11.js  functions_15.js  functions_2.js  functions_3.js  functions_e.js  searchdata.js  typedefs_3.js  variables_1.js  variables_2.js
MolSim/doxys_documentation/latex/: ArrayUtils_8h.tex  ArrayUtils_8h_source.tex  FileReader_8cpp.tex  MaxwellBoltzmannDistribution_8h_source.tex  ParticleContainer_8cpp.tex  ParticleContainer_8h.tex  ParticleContainer_8h_source.tex  Particle_8cpp.tex  VTKWriter_8cpp.tex  XYZWriter_8cpp.tex  XYZWriter_8h_source.tex  classCells.tex  classDataArrayList__t.tex  classFileReader.tex  classParticle.tex  classPoints.tex  classPolyData__t.tex  classVTKFile__t.tex  classoutputWriter_1_1XYZWriter.tex  namespaceArrayUtils.tex  namespacexml__schema.tex  namespacexml__schema_1_1dom.tex  structArrayUtils_1_1is__container.tex  vtk-unstructured_8cpp.tex  vtk-unstructured_8h.tex
MolSim/src/: FileReader.cpp  FileReader.h  ForceCalculator.cpp  ForceCalculator.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  PositionCalculator.cpp  VelocityCalculator.cpp  VelocityCalculator.h
MolSim/src/calculations/: ForceCalculator.cpp  ForceCalculator.h  PositionCalculator.h  VelocityCalculator.cpp
MolSim/src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
MolSim/tests/: CMakeLists.txt  Mocktests.cpp  mockClass.h  test.cpp  tests.cpp
XML_input/: HowTo.md  input-driver.cxx  input-pskel.cxx  input-pskel.hxx  input.xml  input.xsd  inputfile.xml  inputnew-driver.cxx  inputnew-pimpl.cxx  inputnew-pimpl.hxx  inputnew-pskel.cxx  inputnew-pskel.hxx  inputnew.xml  inputnew.xsd
cmake/: @ONLY  MD_vtk_35870.xyz
cmake/tests/: tests[1]_include.cmake
doxys_documentation/html/: ArrayUtils_8h_source.html  FileReader_8cpp.html  Particle_8cpp.html  Particle_8h.html  Particle_8h_source.html  README_8md.html  VTKWriter_8cpp.html  VTKWriter_8h.html  VTKWriter_8h_source.html  XYZWriter_8h.html  classCells-members.html  classDataArray__t-members.html  classDataArray__t.html  classParticle.html  classParticleContainer.html  classPieceUnstructuredGrid__t.html  classPointData-members.html  classPointData.html  classPoints-members.html  classPoints.html  classUnstructuredGrid__t-members.html  classVTKFile__t-members.html  classVTKFile__t.html  classes.html  classoutputWriter_1_1XYZWriter.html  classtype-members.html  dir_20c6ba4f5499f20027f84be4fddbc435.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_b.html  functions_e.html  functions_eval.html  functions_g.html  functions_p.html  functions_w.html  functions_x.html  functions_~.html  globals_func.html  index.html  namespaceArrayUtils.html  (+6 more)
doxys_documentation/html/search/: all_0.js  all_10.js  all_12.js  all_14.js  all_16.js  all_1a.js  all_5.js  all_6.js  all_a.js  (+11 more)
doxys_documentation/latex/: FileReader_8h.tex  FileReader_8h_source.tex  MaxwellBoltzmannDistribution_8h.tex  MolSim_8cpp.tex  Particle_8h.tex  Particle_8h_source.tex  VTKWriter_8h_source.tex  XYZWriter_8h.tex  annotated.tex  classCellData.tex  classDataArray__t.tex  classParticleContainer.tex  classPieceUnstructuredGrid__t.tex  classPointData.tex  classUnstructuredGrid__t.tex  classoutputWriter_1_1VTKWriter.tex  classtype.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  index.tex  refman.tex  vtk-unstructured_8h_source.tex
input/: eingabe-sonne.txt  task_3_2_input.xml  task_3_4_input.xml
src/: FileReader.cpp  FileReader.h  LinkedCellContainer.cpp  LinkedCellContainer.h  Membrane.cpp  Membrane.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  Thermostat.cpp  Thermostat.h
src/XMLReader/: XMLReader.cpp  XMLReader.h  input.cxx  input.hxx  input.xsd
src/calculations/: ForceCalculator.cpp  ForceCalculator.h  PositionCalculator.cpp  PositionCalculator.h  VelocityCalculator.cpp  VelocityCalculator.h
src/our_input/: HowTo.md  implementation_input.cpp  implementation_input.h  newinput-driver.cxx  newinput-pimpl.cxx  newinput-pimpl.hxx  newinput-pskel.cxx  newinput-pskel.hxx  newinput.xml  newinput.xsd  test_file.cpp  test_file.h
src/outputWriter/: FileWriter.cpp  FileWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.h
tests/: CMakeLists.txt  tests.cpp
